# potential_fields

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MATH.md  NOTES.md  README.md  TODO.md  pfield_data_obstacles.csv  pfield_data_vectors.csv  visualizing_pfields.py
.github/: CODEOWNERS
.github/workflows/: main.yml
Docker/: Dockerfile  Dockerfile.minimal  build_pfield_lib.sh  entrypoint.sh
Docker/udev_rules/: 60-usb-serial.rules
data/: collision_catalog.txt  executed_trajectory.csv  frames_2025-10-03_16.09.36.gv  frames_2025-10-06_09.05.27.gv  mermaid_diagram.mmd  original_robot_description.xml  pfield_data_obstacles.csv  pfield_data_vectors.csv  planned_path.csv  planned_path_20251011_203447.csv  planned_path_20251013_115911.csv  planned_path_20251110_113538.csv  planned_path_20251110_114216.csv  planned_path_demo1.csv  planned_path_demo2.csv  planning_robot_description.xml  plot_plan_path_response.py  ros_info.md  ros_structure.txt  store_ros_data.sh  task_space_demo1_path_data.csv  task_space_demo2_path_data.csv  taskspace_demo1.csv  visualize_motion_limits.py  visualize_pf_forces.py
docs/: potential_fields.md  usage.md
images/: visualizing_pfields.py
pfield_library/: CMakeLists.txt  README.md  package.xml
pfield_library/cmake/: pfield_libraryConfig.cmake.in
pfield_library/include/pfield/: mesh_collision.hpp  pf_kinematics.hpp  pf_obstacle.hpp  pfield.hpp  pfield_common.hpp  spatial_vector.hpp
pfield_library/include/pfield_library/pfield/: mesh_collision.hpp  pf_kinematics.hpp  pf_obstacle.hpp  pfield.hpp  pfield_common.hpp
pfield_library/include/pfield_library/solvers/: geofik.h  ik_solver.hpp  weighted_ik.h  xarm_ik_solver.hpp
pfield_library/include/solvers/: ik_solver.hpp  weighted_ik.h  xarm_ik_solver.hpp
pfield_library/src/pfield/: mesh_collision.cpp  pf_kinematics.cpp  pf_obstacle.cpp  pfield.cpp  spatial_vector.cpp
pfield_library/src/solvers/: geofik.cpp  weighted_ik.cpp  xarm_ik_solver.cpp
pfields_demo/: CMakeLists.txt  package.xml
pfields_demo/include/pfields_demo/: pfield_demo.hpp  pfield_teleop_demo.hpp
pfields_demo/launch/: pf_demo.launch.xml
pfields_demo/meshes/: pokeball.dae
pfields_demo/pfields_demo/: local_minima_demo.py  pf_demo.py  sphere_robot_demo.py
pfields_demo/src/: pfield_demo.cpp  pfield_teleop_demo.cpp
pfields_demo/urdf/: fer_franka_hand.urdf  robot.urdf  sphere_robot.urdf  xarm7.urdf
potential_fields/: CHANGELOG.rst  CMakeLists.txt  CPPLINT.cfg  README.md  package.xml
potential_fields/config/: motion_interface_config.yaml  pfield_config.yaml  rviz_config.rviz  view_pfield.rviz
potential_fields/include/potential_fields/: pfield.hpp  pfield_manager.hpp  pfields.hpp  pfields_node.hpp  potential_field_obstacle.hpp  robot_parser.hpp  spatial_vector.hpp  sphere_obstacle.hpp
potential_fields/include/potential_fields/pfield/: mesh_collision.hpp  pf_kinematics.hpp  pf_obstacle.hpp  pfield.hpp  pfield_common.hpp  spatial_vector.hpp
potential_fields/include/potential_fields/robot_plugins/: examples_common.h  franka_plugin.hpp  ik_solver.hpp  motion_plugin.hpp  null_motion_plugin.hpp  weighted_ik.h  xarm_plugin.hpp
potential_fields/include/potential_fields/ros/: motion_interface.hpp  pfield_manager.hpp  robot_parser.hpp
potential_fields/launch/: pfield.launch.xml
potential_fields/src/: pfield.cpp  pfield_manager.cpp  pfields.cpp  robot_parser.cpp
potential_fields/src/pfield/: mesh_collision.cpp  pf_kinematics.cpp  pf_obstacle.cpp  pfield.cpp  spatial_vector.cpp
potential_fields/src/robot_plugins/: examples_common.cpp  franka_plugin.cpp  geofik.cpp  jparse.cpp  weighted_ik.cpp  xarm_plugin.cpp
potential_fields/src/ros/: motion_interface.cpp  pfield_manager.cpp  robot_parser.cpp
potential_fields/test/: test_mesh_obstacle.cpp  test_pf_obstacles.cpp  test_pfields.cpp  test_robot_parser.cpp  test_spatial_vector.cpp  test_visualization_profiling.cpp
potential_fields_demos/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
potential_fields_demos/config/: demo.yaml
potential_fields_demos/include/pfields_demo/: pfield_demo.hpp
potential_fields_demos/include/potential_fields_demos/: pfield_demo.hpp  pfield_teleop_demo.hpp
potential_fields_demos/launch/: pf_demo.launch.xml
potential_fields_demos/potential_fields_demos/: pf_demo.py  sphere_robot_demo.py
potential_fields_demos/src/: pfield_demo.cpp  pfield_teleop_demo.cpp
potential_fields_demos/urdf/: fer_franka_hand.urdf  robot.urdf.xacro  sphere_robot.urdf  xarm7.urdf
potential_fields_interfaces/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
potential_fields_interfaces/msg/: Obstacle.msg
potential_fields_interfaces/srv/: ComputeAutonomyVector.srv  PFieldStep.srv  PlanPath.srv
potential_fields_library/: CHANGELOG.rst  CMakeLists.txt  CPPLINT.cfg  README.md  package.xml
potential_fields_library/cmake/: potential_fields_libraryConfig.cmake.in
potential_fields_library/include/pfield/: mesh_collision.hpp  pf_kinematics.hpp  pf_obstacle.hpp  pf_obstacle_geometry.hpp  pfield.hpp  pfield_common.hpp  spatial_vector.hpp
potential_fields_library/include/solvers/: geofik.h  ik_solver.hpp  xarm_ik_solver.hpp
potential_fields_library/src/pfield/: mesh_collision.cpp  pf_kinematics.cpp  pf_obstacle.cpp  pf_obstacle_geometry.cpp  pfield.cpp  spatial_vector.cpp
potential_fields_library/src/solvers/: weighted_ik.cpp  xarm_ik_solver.cpp
potential_fields_library/test/: test_mesh_obstacle.cpp  test_pf_obstacles.cpp  test_pfields.cpp  test_spatial_vector.cpp
potential_fields_library/test/mocks/: null_ik_solver.hpp
prototyping/: pfield_2d_demo.py  pfield_3d_demo.py  pfield_3d_prototype.py  pfield_path_planning.py  plot_plan_path_response.py  plot_quadratic_threshold.py  visualize_motion_limits.py  visualize_pf_forces.py
scripts/: build_pfield_lib.sh  build_repo.sh  run_docker_example.sh
