<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pfields_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sharwinpatil@u.northwestern.edu">Sharwin Patil</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>pfield_library</depend>
  <depend>potential_fields_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>urdf</depend>
  <depend>Eigen3</depend>
  <depend>ament_index_cpp</depend>

  <!-- Python packaging support -->
  <exec_depend>ament_cmake_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
